switch to wtf recaptcha

--- a/etc/sample.ini
+++ b/etc/sample.ini
@@ -6,6 +6,11 @@ secret_key = something unique and hard to guess
 error_log = /path/to/error_log
 debug = true
 
+[www.recaptcha]
+use_ssl = True
+public_key = public_key
+private_key = private_key
+
 [mail]
 server = smtp.gmail.com
 port = 587
