fixed wsgi section

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -36,5 +36,5 @@ wsgi-module = geopd.www.app
 target = ${buildout:directory}/geopd.wsgi
 initialization =
     import os
-    os.environ['GEOPD_CONFIG_PATH'] = '${env:DX_CONFIG_PATH}'
-    os.environ['GEOPD_DB_PASSWORD'] = '${env:DX_DB_PASSWORD}'
+    os.environ['GEOPD_CONFIG_PATH'] = '${env:GEOPD_CONFIG_PATH}'
+    os.environ['GEOPD_DB_PASSWORD'] = '${env:GEOPD_DB_PASSWORD}'
