improved registration and user info, and added post form

--- a/etc/sample.ini
+++ b/etc/sample.ini
@@ -31,3 +31,8 @@ sql_log = /path/to/sql_log
 
 [db.init]
 password = ****
+
+[google.api]
+map_url = https://maps.googleapis.com/maps/api/js
+place_url = https://maps.googleapis.com/maps/api/place/autocomplete/json
+key = google_api_key
