using sqlalchemy-jsonapi package instead of an in-house solution

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -15,7 +15,7 @@ eggs = flask
        flask-assets
        flask-moment
        sqlalchemy
-       sqlalchemy-utils
+       sqlalchemy-jsonapi
        python-dateutil
        ipaddress
        cssmin
