added sqlalchemy_jsonapi patch

--- a/etc/buildout.cfg
+++ b/etc/buildout.cfg
@@ -1,5 +1,5 @@
 [buildout]
-parts = env util wsgi
+parts = env util wsgi jsonapi
 find-links = http://eggserver/geopd
 
 [env]
@@ -30,3 +30,8 @@ initialization =
     os.environ['GEOPD_CONFIG_PATH'] = '${env:GEOPD_CONFIG_PATH}'
     os.environ['MAIL_USERNAME'] = '${env:MAIL_USERNAME}'
     os.environ['MAIL_PASSWORD'] = '${env:MAIL_PASSWORD}'
+
+[jsonapi]
+recipe = collective.recipe.patch
+egg = sqlalchemy_jsonapi==4.0.8
+patches = etc/sqlalchemy_jsonapi.patch
