using the new can.web framework

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,5 +1,5 @@
 [buildout]
-develop = .
+develop = . ../can.web/
 parts = env util geopd
 
 [env]
@@ -7,22 +7,9 @@ recipe = collective.recipe.environment
 
 [util]
 recipe = zc.recipe.egg:eggs
-eggs = flask
-       flask-bootstrap
-       flask-wtf
-       flask-login
-       flask-mail
-       flask-assets
-       flask-moment
-       sqlalchemy
-       sqlalchemy-jsonapi
-       python-dateutil
-       ipaddress
-       cssmin
-       jsmin
-       psycopg2
-       biopython
+eggs = can.web
        markdown
+       biopython
 
 [geopd]
 recipe = zc.recipe.egg
@@ -37,4 +24,3 @@ target = ${buildout:directory}/geopd.wsgi
 initialization =
     import os
     os.environ['GEOPD_CONFIG_PATH'] = '${env:GEOPD_CONFIG_PATH}'
-    os.environ['GEOPD_DB_PASSWORD'] = '${env:GEOPD_DB_PASSWORD}'
