flask app initialized in web.py module instead of the root __init__.py

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -19,7 +19,7 @@ interpreter = py
 [wsgi]
 recipe = mk.recipe.modwsgi
 eggs = geopd
-wsgi-module = geopd.www.app
+wsgi-module = geopd.web
 target = ${buildout:directory}/geopd.wsgi
 initialization =
     import os
