updated jsonapi patch

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,6 @@
 [buildout]
 develop = . ../can.web/
-parts = env util geopd
+parts = env util jsonapi geopd
 
 [env]
 recipe = collective.recipe.environment
@@ -15,6 +15,11 @@ eggs = can.web
 recipe = zc.recipe.egg
 eggs = geopd
 interpreter = py
+
+[jsonapi]
+recipe = collective.recipe.patch
+egg = sqlalchemy_jsonapi==4.0.8
+patches = etc/sqlalchemy_jsonapi.patch
 
 [wsgi]
 recipe = mk.recipe.modwsgi
