added survey summary pages

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,6 @@
 [buildout]
-develop = . ../can.web/
-parts = env util jsonapi geopd
+develop = . ../can.web/ ../sqlalchemy_jsonapi/
+parts = env util geopd
 
 [env]
 recipe = collective.recipe.environment
@@ -8,6 +8,7 @@ recipe = collective.recipe.environment
 [util]
 recipe = zc.recipe.egg:eggs
 eggs = can.web
+       sqlalchemy_jsonapi
        markdown
        biopython
 
